Added parallax header.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>he</title>
+    <meta charset="utf-8">
+    <title>Your page title here :)</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
 </html>
+<body>
+  <header class="bird-box">
+    <div class="back-bird"></div>
+    <div class="logo"></div>
+    <div class="fore-bird"></div>
+  </header>
+  <section class="content">
+    <article>
+      <h1>Clothing Store</h1>
+      <hr>
+      <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+    </article>
+    <div style="height: 2000px"></div>
+  </section>
+</body>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="js/script.js"></script>
