Added parallax zooming thumbnails.

--- a/index.html
+++ b/index.html
@@ -26,26 +26,44 @@
       <hr>
       <div class="clothes-pics">
         <div class="row img-row">
-          <figure class="columns four"><img src="img/model1.jpg"></figure>
-          <figure class="columns four"><img src="img/model2.jpg"></figure>
-          <figure class="columns four"><img src="img/model3.jpg"></figure>
+          <figure class="columns four"><img src="img/model1.jpg">
+            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model2.jpg">
+            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model3.jpg">
+            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+          </figure>
         </div>
         <div class="row img-row">
-          <figure class="columns four"><img src="img/model1.jpg"></figure>
-          <figure class="columns four"><img src="img/model2.jpg"></figure>
-          <figure class="columns four"><img src="img/model3.jpg"></figure>
+          <figure class="columns four"><img src="img/model2.jpg">
+            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model3.jpg">
+            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model1.jpg">
+            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+          </figure>
         </div>
         <div class="row img-row">
-          <figure class="columns four"><img src="img/model1.jpg"></figure>
-          <figure class="columns four"><img src="img/model2.jpg"></figure>
-          <figure class="columns four"><img src="img/model3.jpg"></figure>
+          <figure class="columns four"><img src="img/model3.jpg">
+            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model1.jpg">
+            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+          </figure>
+          <figure class="columns four"><img src="img/model2.jpg">
+            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+          </figure>
         </div>
-        <h1>Clothing Store</h1>
-        <hr>
-        <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
-        <hr>
-        <div class="large-window"></div>
       </div>
+      <h1>Clothing Store</h1>
+      <hr>
+      <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+      <hr>
+      <div class="large-window"></div>
     </article>
     <div style="height: 2000px"></div>
   </section>
