Added periscope effect to the rounded item.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Your page title here :)</title>
+    <title>- BlackBird Clothing -</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,7 +63,11 @@
       <hr>
       <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
       <hr>
-      <div class="large-window"></div>
+      <div class="large-window">
+        <div class="window-tint">
+          <div class="promo-text">Fall Suits <strong><span>from</span> $99</strong><a href="" class="window-cta">Shop Now </a></div>
+        </div>
+      </div>
     </article>
     <div style="height: 2000px"></div>
   </section>
