--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   <section class="content">
     <article>
-      <h1>Clothing Store</h1>
+      <h1>Unique Style</h1>
       <hr>
       <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
       <hr>
@@ -59,13 +59,34 @@
           </figure>
         </div>
       </div>
-      <h1>Clothing Store</h1>
+      <h1>Fine Tayloring</h1>
       <hr>
       <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
       <hr>
       <div class="large-window">
         <div class="window-tint">
           <div class="promo-text">Fall Suits <strong><span>from</span> $99</strong><a href="" class="window-cta">Shop Now </a></div>
+        </div>
+      </div>
+      <h1>Rich History</h1>
+      <hr>
+      <p>Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+      <hr>
+      <div class="blog-posts row">
+        <div class="post columns four post-1">
+          <h5>Post Title</h5><img src="img/posts/one.jpg">
+          <p>Cras mattis consectetur purus sit amet fermentum. </p>
+          <p><a href="" class="button">Read More</a></p>
+        </div>
+        <div class="post columns four post-2">
+          <h5>Post Title</h5><img src="img/posts/two.jpg">
+          <p>Cras mattis consectetur purus sit amet fermentum. </p>
+          <p><a href="" class="button">Read More</a></p>
+        </div>
+        <div class="post columns four post-3">
+          <h5>Post Title</h5><img src="img/posts/three.jpg">
+          <p>Cras mattis consectetur purus sit amet fermentum.</p>
+          <p><a href="" class="button">Read More</a></p>
         </div>
       </div>
     </article>
